Resolves styling issues on mobile with bottom nav on homepage

--- a/css/terry.css
+++ b/css/terry.css
@@ -26,6 +26,10 @@ dl > dd {
   opacity: 0;
 }
 
+.navSpace * {
+  display: none;
+}
+
 article > section > p {
   font-size: 1.2rem;
   color: #28282c;
@@ -63,6 +67,11 @@ nav {
 nav > ul {
   list-style: none;
   position: relative;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px;
 }
 
 nav > ul > li {
@@ -143,7 +152,9 @@ img {
     bottom: 0;
     right: 0;
     z-index: 1;
-    background-color: white
+    /* background-color: white; */
+    background-color:rgba(300,300,300,1);
+    display: table;
   }
   nav > ul > li {
     float: right;
